--- a/virtual-keyboard/.eslintrc
+++ b/virtual-keyboard/.eslintrc
@@ -16,7 +16,9 @@
     "indent": ["warn", 2, {
       "SwitchCase": 1
     }],
+    "no-param-reassign": 0,
     "object-curly-newline": 0,
+    "no-restricted-syntax": 0,
     "operator-linebreak": ["error", "after"],
     "import/no-cycle": [0, {
       "ignoreExternal": true
